--- a/src/templates/public/EditTask.tmpl
+++ b/src/templates/public/EditTask.tmpl
@@ -4,7 +4,7 @@
 {% block title %}Add task.{% endblock %}
 
 {% block content %}
-  <h3>Přidat jméno</h3>
+  <h3>Změnit jméno</h3>
   <div class="form-group">Zadání jména a příjmení</div>
   <form method="POST" id='insert-form'>
     {{ form.hidden_tag() }}
